--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,6 +35,16 @@
             </div>
         </div>
     </nav>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+     {% if messages %}
+      {% for category, message in messages %}
+        <div class="alert alert-{{ 'danger' if category == 'error' else category }} mt-3" role="alert">
+        {{ message }}
+        </div>
+      {% endfor %}
+     {% endif %}
+    {% endwith %}
+
 
     <!-- Main Content -->
     <div class="container mt-4">
