--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
                 <ul class="navbar-nav ms-auto">
                     {% if session.get('user_id') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="">Logout</a>
+                            <a class="nav-link" href="/logout">Logout</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
