--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    {% block head %}
+
+    {% endblock %}
 </head>
 <body>
     <!-- Navbar -->
