--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,7 @@
           <div class="mb-3">
             <label for="Password" class="form-label">Password</label>
             <div class="input-group">
-              <input type="password" class="form-control" id="Password" name="Password" required>
+              <input type="password" class="form-control" id="Password" name="Password" required autocomplete="off">
               <button type="button" class="btn btn-outline-secondary" id="togglePassword">👁️</button>
             </div>
             <div class="progress mt-2" style="height: 5px;">
@@ -30,7 +30,7 @@
 
           <div class="mb-3">
             <label for="ConfirmPassword" class="form-label">Confirm Password</label>
-            <input type="password" class="form-control" id="ConfirmPassword" name="ConfirmPassword" required>
+            <input type="password" class="form-control" id="ConfirmPassword" name="ConfirmPassword" required autocomplete="off">
           </div>
 
           <button type="submit" class="btn btn-primary w-100 rounded-pill mt-2">Register</button>
