--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,13 @@
         <form action="{{ url_for('login') }}" method="POST">
           <div class="mb-3">
             <label for="UserName" class="form-label">Username/Email</label>
-            <input type="text" class="form-control" id="UserName" name="UserId" required>
+            <input type="text" class="form-control" id="UserName" name="UserId" required autofocus>
           </div>
 
           <div class="mb-3">
             <label for="Password" class="form-label">Password</label>
             <div class="input-group">
-              <input type="password" class="form-control" id="Password" name="Password" required>
+              <input type="password" class="form-control" id="Password" name="Password" required autocomplete="off">
               <button type="button" class="btn btn-outline-secondary" id="togglePassword">👁️</button>
             </div>
           </div>
