--- a/templates/add_transaction_form.html
+++ b/templates/add_transaction_form.html
@@ -1,4 +1,4 @@
-<h3 class="text-center mb-3">Add Transaction</h3>
+<h3 class="text-center mb-3 mt-4">Add Transaction</h3>
 
 <form action="{{ url_for('add_transaction') }}" method="POST" class="p-3">
   <div class="mb-3">
